# this file is for creating the PyPi package. See
# https://packaging.python.org/en/latest/tutorials/packaging-projects/
# TODO: I'm actually not sure if it requires Python 3.6, it might also
# work with older Python. And also with numpy older than 1.20

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tinyfive"
version = "0.0.15"
authors = [
  { name="Open Machine", email="tinyfive@openmachine.ai" },
]
description = "TinyFive is a lightweight RISC-V emulator and assembler written entirely in Python"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy>1.20.0",
]

[project.urls]
"Homepage" = "https://github.com/OpenMachine-ai/tinyfive"
"Bug Tracker" = "https://github.com/OpenMachine-ai/tinyfive/issues"
